syntax = "proto3";

package proto;

option go_package = "user-service-go/proto";

import "google/protobuf/empty.proto";

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  int32 role_id = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message EditUserRequest {
  string password = 1;
}


message UserIdRequest {
  int32 user_id = 1;
}

message MessageResponse {
  string message = 1;
}

message AuthResponse {
  string access_token = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
  int32 role_id = 4;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

service UserService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);

  rpc DeleteAccount(google.protobuf.Empty) returns (MessageResponse);
  rpc EditAccount(EditUserRequest) returns (MessageResponse);
  rpc Logout(google.protobuf.Empty) returns (MessageResponse);

  rpc GetUserById(UserIdRequest) returns (UserResponse);
  rpc GetAllUsers(google.protobuf.Empty) returns (UsersResponse);
  rpc GetMyProfile(google.protobuf.Empty) returns (UserResponse);
}
